Wed Aug 25 18:15:00 2004  Tim Janik  <timj@gtk.org>

	* bsetype.h: added dB property type.

	* bsebus.[hc]: construct effect stack csynth and add a volume
	module into it. update the volume effect from volume properties.

	* bsebusmodule.idl:
	* bsebusmodule.cc: implement module functionality needed by busses.

	* bsecontainer.c: fix base-name handling in
	bse_container_new_child_bname() for objects with default names.

	* bseproject.[hc: implement bse_project_create_intern_csynth().

	* bsesong.c: trigger effect stack creation of busses after adding
	them to songs.

Sun Aug 22 19:26:23 2004  Tim Janik  <timj@gtk.org>

	* bsebus.[hc]: made bus input channels private to avoid undo or disk
	storage of channel states. busses maintain connections on their own.
	added ::master-output bool property to set whether a bus is the master
	bus of a song. 
	added bse_bus_disconnect_outputs() and bse_bus_list_outputs().

	* bseenums.[hc]: const-corrections. added i18n markup to error blurbs.
	added BSE_ERROR_SOURCE_PRIVATE_ICHANNEL and bse_assert_ok().

	* bsesong.[hc]: got rid of master_bus member. detect master-bus-ness
	through signal connections. removed bse_song_get_master(), added
	bse_song_find_master() and bse_song_connect_master().

	* bsesong.proc: create master bus undoable.

	* bsesource.[hc]: added bse_source_get_input(). cleaned up
	bse_source_must_set_input(). added PRIVATE_INPUTS flag, skipped
	channel storage/restoring for private inputs.

Fri Aug 20 18:31:59 2004  Tim Janik  <timj@gtk.org>

	* bsebus.[hc]: added left/right db-volume properties.

	* bseconstvalues.h: increased min/max db constants.

	* bseenginemaster.c: fixed NULL-pointer check.

	* bseglobals.[hc]: renamed bse_db_to_factor() and bse_db_from_factor().
	fixed up calculated dB values (use a factor of 20 not 10 for peaks).
	adapted callers.

Tue Aug 17 17:38:39 2004  Tim Janik  <timj@gtk.org>

	* bsebus.c: prototyped ::inputs property. i18n fixups.

	* bseitem.c: docu fixups.
