@@ -1,3 +1,8 @@
+Wed Aug 25 23:24:23 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bseenginemaster.c: Fix memcpy in master_take_probes to copy the
+	right amount of probe data (each sample is sizeof (gfloat) bytes).
+
 Wed Aug 25 18:15:00 2004  Tim Janik  <timj@gtk.org>
 
 	* bsetype.h: added dB property type.
